Bug 982121 - consume wheel events when popups are open, r=enndeakin

MozReview-Commit-ID: FnbaaLV0pHm

--HG--
extra : rebase_source : ceefd762be846f2145b20718104fde62fce6a34d
extra : amend_source : 9e3c44f93c35657d54890329ab12786adb651120